# VesiClear

./: .gitignore  LICENSE  README.md  pyproject.toml
vesiclear/: VERSION.md  __init__.py  pick_membrane_robust.py
vesiclear/helpers/: detailed_logging.py  load_micrographs.py  picking_parser.py  save_output.py  time_tracker.py  utils.py
vesiclear/refinement_pipeline/: extract_baseline.py  fit_centerline.py  gather_evidence.py  plot_intensity.py
vesiclear/subtraction/: batch_process_spectral_v4.py  batch_subtract.py  membrane_subtraction_v4_clipped.py  spline_to_mrc.py
